fix: update hero text colors to improve visibility on support page

--- a/src/app/pages/support/support.component.scss
+++ b/src/app/pages/support/support.component.scss
@@ -10,13 +10,13 @@
 
   h1 {
     font-size: 3rem;
-    font-weight: 700;
     margin-bottom: 1rem;
+    color: white;
   }
 
   .subtitle {
     font-size: 1.25rem;
-    opacity: 0.95;
+    color: white;
   }
 }
 
